crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/049.cypher
MERGE (n:Foo {x: $x}) ON MATCH SET n.y = $y; RETURN n
